--- a/index.html
+++ b/index.html
@@ -1088,9 +1088,9 @@
             3: ['asteroid', 'asteroid', 'asteroid', 'tadpole'],
             4: ['phantom', 'triangle', 'tadpole', 'tadpole', 'dragon', 'dragon', 'asteroid'],
             5: ['triangle', 'tadpole', 'dragon', 'triangle', 'hunter', 'asteroid'],
-            6: ['triangle', 'tadpole', 'dragon', 'triangle', 'hunter', 'hunter', 'asteroid'],
-            7: ['triangle', 'tadpole', 'dragon', 'dragon', 'hunter', 'hunter', 'asteroid'],
-            8: ['triangle', 'hunter', 'tadpole', 'dragon', 'asteroid']
+            6: ['triangle', 'tadpole', 'dragon', 'triangle', 'hunter', 'phantom', 'asteroid'],
+            7: ['triangle', 'tadpole', 'dragon', 'phantom', 'hunter', 'hunter', 'asteroid'],
+            8: ['triangle', 'hunter', 'phantom', 'tadpole', 'dragon', 'asteroid']
         };
 
         // Stage 9 (ボスラッシュ) 専用の雑魚スポーン設定
