--- a/index.html
+++ b/index.html
@@ -1086,8 +1086,8 @@
             1: ['triangle', 'triangle', 'triangle', 'dragon'],
             2: ['triangle', 'triangle', 'tadpole', 'dragon'],
             3: ['asteroid', 'asteroid', 'asteroid', 'tadpole'],
-            4: ['phantom', 'triangle', 'tadpole', 'tadpole', 'dragon', 'dragon', 'asteroid'],
-            5: ['triangle', 'tadpole', 'dragon', 'triangle', 'hunter', 'asteroid'],
+            4: ['phantom', 'triangle', 'tadpole', 'asteroid'],
+            5: ['triangle', 'tadpole', 'dragon', 'hunter', 'hunter', 'asteroid'],
             6: ['triangle', 'tadpole', 'dragon', 'triangle', 'hunter', 'phantom', 'asteroid'],
             7: ['triangle', 'tadpole', 'dragon', 'phantom', 'hunter', 'hunter', 'asteroid'],
             8: ['triangle', 'hunter', 'phantom', 'tadpole', 'dragon', 'asteroid']
